--- a/index.html
+++ b/index.html
@@ -5,50 +5,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Course 1</title>
+    <title>Course 1 Homework 1</title>
   </head>
   <body>
     <section id="blog">
       <div class="blog-heading">
         <span>My recent posts</span>
-        <h3>Web Course</h3>
+        <h3>Web Course First Homework about TURTLE </h3>
       </div>
       <div class="blog-container">
         <div class="blog-box">
           <div class="blog-img">
-            <img src="setupNode.png" />
+            <img src="Bt.png" />
           </div>
           <div class="blog-text">
-            <span>26 April 2022 / Course 1</span>
+            <span>29 April 2022 / Course 1 Homework1 TURTLE 1
+
+            </span>
             <a href="#" class="blog-title">Course 1: Setup Web</a>
             <p>
-              The first course present the introduction in HTML, CSS, Node, Git
+              The first homework present the TURTLE introduction in HTML, CSS, Node, Git
             </p>
           </div>
           <button class="blog-button">Read More</button>
         </div>
         <div class="blog-box">
           <div class="blog-img">
-            <img src="setupNode.png" />
+            <img src="Bt.png" />
           </div>
           <div class="blog-text">
-            <span>26 April 2022 / Course 1</span>
+            <span>29 April 2022 / Course 1 Homework1 TURTLE 1</span>
             <a href="#" class="blog-title">Course 1: Setup Web</a>
             <p>
-              The first course present the introduction in HTML, CSS, Node, Git
+              The first homework present the TURTLE introduction in HTML, CSS, Node, Git
             </p>
           </div>
           <button class="blog-button">Read More</button>
         </div>
         <div class="blog-box">
           <div class="blog-img">
-            <img src="setupNode.png" />
+            <img src="Bt.png" />
           </div>
           <div class="blog-text">
-            <span>26 April 2022 / Course 1</span>
+            <span>29 April 2022 / Course 1 Homework1 TURTLE 1</span>
             <a href="#" class="blog-title">Course 1: Setup Web</a>
             <p>
-              The first course present the introduction in HTML, CSS, Node, Git
+              The first homework present TURTLE the introduction in HTML, CSS, Node, Git
             </p>
           </div>
           <button class="blog-button">Read More</button>
